# punchline

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: CLAUDE.md
config/: settings.yaml
punchline/: __init__.py  cli.py  config.py  db.py  pipeline.py
punchline/scraper/: reddit.py  scorer.py
punchline/script/: generator.py
punchline/subs/: generator.py
punchline/tts/: engine.py
punchline/video/: composer.py
